test/corpus/analytic_windowed_function.txt
=====================================
analytic first
=====================================
SELECT FIRST_VALUE(foo) OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_functions
                            (first_value_)
                            (expression
                              (full_column_name
                                (id_)))
                            (over_clause
                              (partition_by_clause
                                (expression_list_
                                  (expression
                                    (full_column_name
                                      (id_)))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic last
=====================================
SELECT LAST_VALUE(foo) OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_functions
                            (last_value_)
                            (expression
                              (full_column_name
                                (id_)))
                            (over_clause
                              (partition_by_clause
                                (expression_list_
                                  (expression
                                    (full_column_name
                                      (id_)))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic lag 1
=====================================
SELECT LAST_VALUE(foo) OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_functions
                            (last_value_)
                            (expression
                              (full_column_name
                                (id_)))
                            (over_clause
                              (partition_by_clause
                                (expression_list_
                                  (expression
                                    (full_column_name
                                      (id_)))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic LAGLEAD0
=====================================
SELECT LEAD(foo) OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_functions
                            (lead_)
                            (lag_lead_args
                              (expression
                                (full_column_name
                                  (id_))))
                            (over_clause
                              (partition_by_clause
                                (expression_list_
                                  (expression
                                    (full_column_name
                                      (id_)))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic CUME_DIST
=====================================
SELECT id, CUME_DIST() OVER (PARTITION BY Foo ORDER BY baz)
FROM BAR
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (full_column_name
                          (id_)))))
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_functions
                            (cume_dist_)
                            (over_)
                            (partition_by_clause
                              (expression_list_
                                (expression
                                  (full_column_name
                                    (id_)))))
                            (order_by_clause
                              (order_by_expression
                                (expression
                                  (full_column_name
                                    (id_)))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic PERCENT_RANK
=====================================
SELECT id, PERCENT_RANK() OVER (ORDER BY baz)
FROM BAR
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (full_column_name
                          (id_)))))
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_functions
                            (percent_rank_)
                            (over_)
                            (order_by_clause
                              (order_by_expression
                                (expression
                                  (full_column_name
                                    (id_)))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic PERCENTILE_CONT
=====================================
SELECT PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY FOO) OVER (PARTITION BY BAR)
FROM BAZ
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_functions
                            (percentile_cont_)
                            (expression
                              (primitive_expression
                                (primitive_constant
                                  (float_))))
                            (within_group_)
                            (order_by_clause
                              (order_by_expression
                                (expression
                                  (full_column_name
                                    (id_)))))
                            (over_)
                            (partition_by_clause
                              (expression_list_
                                (expression
                                  (full_column_name
                                    (id_)))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic PERCENTILE_DISC
=====================================
SELECT PERCENTILE_DISC(0.5) WITHIN GROUP (ORDER BY FOO) OVER ()
FROM BAZ
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_functions
                            (percentile_disc_)
                            (expression
                              (primitive_expression
                                (primitive_constant
                                  (float_))))
                            (within_group_)
                            (order_by_clause
                              (order_by_expression
                                (expression
                                  (full_column_name
                                    (id_)))))
                            (over_)))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))
