test/corpus/batch.txt
=====================================
Go Batch Repeated
=====================================
Go
GO
go
---

(tsql_file
  (batch (go_statement))
  (batch (go_statement))
  (batch (go_statement)))
